  0 padding.

- Issue #2560: remove an unnecessary 'for' loop from my_fgets() in
  Parser/myreadline.c.

- Issue #7988: Fix default alignment to be right aligned for
  complex.__format__. Now it matches other numeric types.

- Issue #5211: the complex type no longer uses implicit coercion in
  mixed-type binary arithmetic operations.

Library
-------

- Issue #1729305: Fix doctest to handle encode error with "backsplashreplace".

- Issue #691291: codecs.open() should not convert end of lines on reading and
  writing.

- Issue #7975: correct regression in dict methods supported by bsddb.dbshelve.

- Issue #7959: ctypes callback functions are now registered correctly
  with the cycle garbage collector.

- Issue #7970: email.Generator.flatten now correctly flattens message/rfc822
  messages parsed by email.Parser.HeaderParser.

- Issue #3426: ``os.path.abspath`` now returns unicode when its arg is unicode.

- Issue #7633: In the decimal module, Context class methods (with the
  exception of canonical and is_canonical) now accept instances of int
  and long wherever a Decimal instance is accepted, and implicitly
  convert that argument to Decimal.  Previously only some arguments
  were converted.

- Issue #6003: add an argument to ``zipfile.Zipfile.writestr`` to
  specify the compression type.

- Issue #7893: ``unittest.TextTestResult`` is made public and a ``resultclass``
  argument added to the TextTestRunner constructor allowing a different result
  class to be used without having to subclass.

- Issue #7588: ``unittest.TextTestResult.getDescription`` now includes the test
  name in failure reports even if the test has a docstring.

- Issue #5801: removed spurious empty lines in wsgiref.

- Issue #1537721: Add a writeheader() method to csv.DictWriter.

- Issue #7427: improve the representation of httplib.BadStatusLine exceptions.

- Issue #7481: When a threading.Thread failed to start it would leave the